# walksnail-updater

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  refresh-manuals.yml  release.yml
crates/firmware-index/: Cargo.toml
crates/firmware-index/src/: d3vl.rs  lib.rs  official.rs  walksnail_app.rs
crates/hardware/: Cargo.toml
crates/hardware/src/: lib.rs
crates/manuals/: Cargo.toml  manifest.toml
crates/manuals/src/: lib.rs
crates/sdcard/: Cargo.toml
crates/sdcard/src/: lib.rs  scan.rs  stage.rs  watcher.rs
scripts/: gen-icons.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: instructions.json
src-tauri/src/: cache.rs  commands.rs  events.rs  main.rs  state.rs
src/components/: ChannelBadge.tsx  DisclaimerBanner.tsx  Footer.tsx  HardwareIcon.tsx  IconButton.tsx  Icons.tsx  InstructionCard.tsx  LoadingOverlay.tsx  ProgressBar.tsx
src/lib/: ipc.ts
src/state/: store.ts
src/views/: About.tsx  HardwareList.tsx  HistoryView.tsx  Onboarding.tsx  SdCardPanel.tsx  Settings.tsx  UpdateWizard.tsx
