[workspace]
resolver = "2"
members = [
    "crates/hardware",
    "crates/firmware-index",
    "crates/sdcard",
    "crates/manuals",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/iksaif/walksnail-updater"
rust-version = "1.77"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
once_cell = "1"
sha1 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
futures-util = "0.3"
tempfile = "3"
sysinfo = "0.38"
walkdir = "2"

hardware = { path = "crates/hardware" }
firmware-index = { path = "crates/firmware-index" }
sdcard = { path = "crates/sdcard" }
manuals = { path = "crates/manuals" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
