[package]
name = "firmware-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fetches + normalizes Walksnail firmware release metadata from D3VL and the CADDXFPV download page."

[dependencies]
hardware.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
regex.workspace = true
once_cell.workspace = true
futures-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
