[package]
name = "manuals"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time tool that downloads upstream Walksnail PDF manuals and extracts per-hardware firmware upgrade instructions."

[dependencies]
hardware.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
chrono.workspace = true
regex.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha1.workspace = true
hex.workspace = true
pdf-extract = "0.9"
toml = "0.8"

[[bin]]
name = "refresh"
path = "src/bin/refresh.rs"
